--- a/frontend/src/Components/Add/Add.css
+++ b/frontend/src/Components/Add/Add.css
@@ -32,7 +32,7 @@ h1 {
     
 }
 
-input[type=text], input[type=number], input[type=date], input[type=file], select, input[type=password], input[type=email] {
+input[type=text], input[type=number], input[type=date], input[type=file], select, input[type=password], input[type=email], textarea {
     width: 100%;
     padding: 10px 20px;
     margin: 8px 0;
