--- a/frontend/src/Components/User/RateMovie/RateMovie.css
+++ b/frontend/src/Components/User/RateMovie/RateMovie.css
@@ -1,9 +1,9 @@
 .rate-container {
-    min-height: 100vh;
+    /* min-height: 100vh; */
     text-align: center;
     margin: 0 50px 0 50px;
     display: flex;
-    gap: 20px;
+    gap: 50px;
 }
 
 .rate-header {
@@ -15,4 +15,48 @@
     height: 600px;
     object-fit: cover;
     border-radius: 20px;
+}
+
+.rate-left {
+    width: 800px;
+}
+
+.rate-right {
+    text-align: justify;
+    width: 1500px;
+}
+
+.below-description {
+    display: flex;
+    gap: 100px;
+}
+
+.below-description-content {
+    text-align: center;
+}
+
+.des-con-p {
+    font-size: 1.5rem;
+}
+
+.des-con-v {
+    font-size: 2.5rem;
+}
+
+.rateBtn {
+    background-color: #cb5745;
+    color: white;
+    padding: 14px 20px;
+    margin: 8px 0;
+    border: none;
+    cursor: pointer;
+    width: 25%;
+    opacity: 0.9;
+    margin-top: 50px;
+    border-radius: 20px;
+}
+
+.rateBtn:hover {
+    background-color: #a63f2f;
+    transition: 300ms;
 }
