--- a/frontend/src/Components/User/RateMovie/RateMovie.css
+++ b/frontend/src/Components/User/RateMovie/RateMovie.css
@@ -47,7 +47,7 @@
     background-color: #cb5745;
     color: white;
     padding: 14px 20px;
-    margin: 8px 0;
+    margin: 8px 0 0 10px;
     border: none;
     cursor: pointer;
     width: 25%;
@@ -59,4 +59,106 @@
 .rateBtn:hover {
     background-color: #a63f2f;
     transition: 300ms;
+}
+
+.modal {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(0, 0, 0, 0.5);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.modal-content {
+    padding: 20px;
+    background-color: rgba(77, 43, 37, 0.6); /* Semi-transparent background */
+    width: 800px;
+    height: auto;
+    backdrop-filter: blur(10px); /* Blurs the background */
+    -webkit-backdrop-filter: blur(10px); /* For Safari */
+    border-radius: 10px;
+    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.5);
+}
+
+.modal-content h2 {
+    margin-bottom: 10px;
+}
+
+.modal-content form {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+}
+
+.modal-content label {
+    font-weight: bold;
+    margin-top: 10px;
+}
+
+.modal-content input,
+.modal-content textarea {
+    width: 100%;
+    padding: 8px;
+    margin-top: 5px;
+}
+
+.modal-content button, .view-modal-content button {
+    margin-top: 10px;
+    padding: 8px;
+    cursor: pointer;
+}
+
+.modal-content .close-button, .view-modal-content button[type="button"] {
+    background: red;
+    color: white;
+}
+
+.rating-item {
+    padding: 15px;
+    border-bottom: 1px solid #ddd;
+    background-color: black;
+    border-radius: 20px;
+    margin-bottom: 10px;
+    height: 110px;
+}
+
+.rating-item:last-child {
+    border-bottom: none;
+}
+
+.ratings-container {
+    max-height: 400px;
+    overflow-y: auto;
+    margin-bottom: 20px;
+}
+
+.view-modal-content {
+    padding: 20px;
+    background-color: rgba(77, 43, 37, 0.6); /* Semi-transparent background */
+    width: 800px;
+    height: auto;
+    backdrop-filter: blur(10px); /* Blurs the background */
+    -webkit-backdrop-filter: blur(10px); /* For Safari */
+    border-radius: 10px;
+    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.5);
+}
+
+
+.view-modal-content h2 {
+    font-size: 2rem;
+    font-weight: 700;
+}
+
+.modal-content h2 {
+    font-size: 2rem;
+    font-weight: 700;
+}
+
+/* For WebKit browsers like Chrome, Safari */
+::-webkit-scrollbar {
+    display: none;
 }
